# cscv

./: .gitignore  README.md
cscv-src/: CMakeLists.txt  README.md
cscv-src/arch/: cpuinfo_util.cc  cpuinfo_util.hpp  naive_numa_util.cc  naive_numa_util.hpp  omp_thread_pool.cc  omp_thread_pool.hpp  pthread_timer.hpp  pthread_util.hpp  ring_fake_barrier.cc  ring_fake_barrier.hpp  thread_instance_map.hpp
cscv-src/base/: basic_definition.cc  basic_definition.hpp  candy.h  logger.hpp  partition_kernel.cc  result_array.hpp  result_table.hpp  seq_map.hpp  string_table.cc  string_table.hpp
cscv-src/compiling/: partition_cscv_alpha_double.cc  partition_cscv_alpha_float.cc  partition_cscv_beta_double.cc  partition_cscv_beta_float.cc  soa_serval_double.cc  soa_serval_float.cc  soa_tea_double.cc  soa_tea_float.cc
cscv-src/cscv/: compute.hpp  cscv.hpp  cscvb.tcc  flags.hpp  part.tcc  partition.cc  partition.hpp  partition.tcc  partition_cscv.tcc  partition_init.tcc  partition_y_ax.tcc  soa.hpp  soa.tcc  system_matrix_converter.hpp  system_matrix_converter.tcc
cscv-src/ct/: ct_common.hpp  system_matrix.cc  system_matrix.hpp
cscv-src/data/: data_container.hpp  data_container.tcc
cscv-src/test/: test_performer.cc  test_performer.hpp  test_performer.tcc
cscv-src/unit-test/04-cscv-exp/06-test-performer/: u04_06.cc
workload-generator/: Makefile
workload-generator/base/: basic_definition.cc  basic_definition.hpp  candy.h  partition_kernel.hpp  result_array.hpp  result_table.hpp  seq_map.hpp  string_table.cc  string_table.hpp
workload-generator/ct/: ct_common.hpp  (+3 more)
(+3 files in other folders)
